--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -169,6 +169,37 @@ jobs:
       - store_artifacts:
           path: /src/xcp_d/.circleci/out/test_ds001419_nifti/xcp_d/
 
+  ds001419_cifti:
+    <<: *dockersetup
+    steps:
+      - checkout
+      - run:
+          name: Check whether build should be skipped
+          command: |
+            cd /src/xcp_d
+            if [[ "$( git log --format=oneline -n 1 $CIRCLE_SHA1 | grep -i -E '\[skip[ _]?ds001419_cifti\]' )" != "" ]]; then
+              echo "Skipping ds001419_cifti build"
+              circleci step halt
+            fi
+      - restore_cache:
+          key: ds001419-fmriprep-08
+      - run: *runinstall
+      - run:
+          name: Run full xcp_d on cifti with freesurfer
+          no_output_timeout: 1h
+          command: |
+            pytest -rP -o log_cli=true -m "ds001419_cifti" --cov-append --cov-report term-missing --cov=xcp_d --data_dir=/src/xcp_d/.circleci/data --output_dir=/src/xcp_d/.circleci/out --working_dir=/src/xcp_d/.circleci/work xcp_d
+            mkdir /src/coverage
+            mv /src/xcp_d/.coverage /src/coverage/.coverage.ds001419_cifti
+            # remove nifti files before uploading artifacts
+            find /src/xcp_d/.circleci/out/ -name "*.nii.gz" -type f -delete
+      - persist_to_workspace:
+          root: /src/coverage/
+          paths:
+            - .coverage.ds001419_cifti
+      - store_artifacts:
+          path: /src/xcp_d/.circleci/out/test_ds001419_cifti/xcp_d/
+
   pnc_nifti:
     <<: *dockersetup
     steps:
@@ -477,6 +508,17 @@ workflows:
             tags:
               only: /.*/
 
+      - ds001419_cifti:
+          requires:
+            - download_data_ds001419
+          filters:
+            branches:
+              ignore:
+                - /docs?\/.*/
+                - /tests?\/.*/
+            tags:
+              only: /.*/
+
       - nibabies:
           requires:
             - download_data_nibabies
@@ -518,6 +560,7 @@ workflows:
             - pnc_cifti
             - pnc_cifti_t2wonly
             - ds001419_nifti
+            - ds001419_cifti
             - pnc_nifti
             - nibabies
             - nifti_without_freesurfer
@@ -533,6 +576,7 @@ workflows:
       - deployable:
           requires:
             - ds001419_nifti
+            - ds001419_cifti
             - pnc_nifti
             - nifti_without_freesurfer
             - nibabies
