--- a/xcp_d/data/xcp_d_bids_config.json
+++ b/xcp_d/data/xcp_d_bids_config.json
@@ -13,6 +13,10 @@
     {
       "name": "measure",
       "pattern": "(?:^|_)measure-([a-zA-Z0-9]+)"
+    },
+    {
+      "name": "Sources",
+      "pattern": ""
     }
   ],
   "default_path_patterns": [
