--- a/xcp_d/data/xcp_d_bids_config.json
+++ b/xcp_d/data/xcp_d_bids_config.json
@@ -16,7 +16,7 @@
     },
     {
       "name": "Sources",
-      "pattern": ""
+      "pattern": "ignore-(this)"
     }
   ],
   "default_path_patterns": [
