--- a/xcp_d/data/reports.yml
+++ b/xcp_d/data/reports.yml
@@ -26,6 +26,8 @@ sections:
   - bids: {datatype: figures, suffix: design}
     caption:  The "design matrix" represents the confounds that are used to denoise the BOLD data.
     subtitle: Design Matrix for Confound Regression
+    style:
+      height: 100px
   - bids: {datatype: figures, desc: postprocessing, suffix: bold}
     caption:  FD and DVARS are two measures of in-scanner motion.
               This plot shows standardized FD, DVARS, and then a carpet plot for the
