Swap out None for false in toml file.

--- a/xcp_d/tests/data/config.toml
+++ b/xcp_d/tests/data/config.toml
@@ -10,24 +10,24 @@ version = "0.6.0"
 
 [execution]
 fmri_dir = ""
-bids_database_dir = None
-bids_description_hash = None
-bids_filters = None
+bids_database_dir = false
+bids_description_hash = false
+bids_filters = false
 boilerplate_only = false
 debug = []
 xcp_d_dir = ""
 fs_license_file = ""
-layout = None
+layout = false
 log_dir = ""
 log_level = 40
-low_mem = None
+low_mem = false
 md_only_boilerplate = false
 notrack = false
 reports_only = false
-output_dir = None
+output_dir = false
 run_uuid = ""
-participant_label = None
-task_id = None
+participant_label = false
+task_id = false
 templateflow_home = ""
 work_dir = ""
 write_graph = false
@@ -38,12 +38,12 @@ dummy_scans = 0
 input_type = "fmriprep"
 despike = false
 params = "36P"
-custom_confounds = None
+custom_confounds = false
 smoothing = 6
 combineruns = false
-motion_filter_type = None
-band_stop_min = None
-band_stop_max = None
+motion_filter_type = false
+band_stop_min = false
+band_stop_max = false
 motion_filter_order = 4
 head_radius = 50
 fd_thresh = 0.3
