--- a/xcp_d/tests/data/config.toml
+++ b/xcp_d/tests/data/config.toml
@@ -9,27 +9,25 @@ templateflow_version = "0.4.2"
 version = "0.6.0"
 
 [execution]
-fmri_dir = ""
-bids_database_dir = false
-bids_description_hash = false
-bids_filters = false
+fmri_dir = "ds000005/"
+bids_description_hash = "123456"
+bids_filters = {}
 boilerplate_only = false
 debug = []
-xcp_d_dir = ""
-fs_license_file = ""
-layout = false
-log_dir = ""
+xcp_d_dir = "ds000005/derivatives/xcp_d"
+fs_license_file = "/opt/freesurfer/license.txt"
+log_dir = "/opt/xcp_d"
 log_level = 40
 low_mem = false
 md_only_boilerplate = false
 notrack = false
 reports_only = false
 output_dir = false
-run_uuid = ""
+run_uuid = "20240205-123456"
 participant_label = false
 task_id = false
-templateflow_home = ""
-work_dir = ""
+templateflow_home = "~/.cache/templateflow"
+work_dir = "work/"
 write_graph = false
 
 [workflow]
