--- a/xcp_d/tests/data/config.toml
+++ b/xcp_d/tests/data/config.toml
@@ -22,10 +22,8 @@ low_mem = false
 md_only_boilerplate = false
 notrack = false
 reports_only = false
-output_dir = false
+output_dir = "ds000005/derivatives"
 run_uuid = "20240205-123456"
-participant_label = false
-task_id = false
 templateflow_home = "~/.cache/templateflow"
 work_dir = "work/"
 write_graph = false
