--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -155,7 +155,7 @@ jobs:
           paths:
             - .coverage.fmriprep_without_freesurfer
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_fmriprep_without_freesurfer/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_fmriprep_without_freesurfer/
 
   ds001419_nifti:
     <<: *dockersetup
@@ -186,7 +186,7 @@ jobs:
           paths:
             - .coverage.ds001419_nifti
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_ds001419_nifti/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_ds001419_nifti/
 
   ds001419_cifti:
     <<: *dockersetup
@@ -217,7 +217,7 @@ jobs:
           paths:
             - .coverage.ds001419_cifti
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_ds001419_cifti/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_ds001419_cifti/
 
   ukbiobank:
     <<: *dockersetup
@@ -235,7 +235,7 @@ jobs:
           key: ukbiobank-08
       - run: *runinstall
       - run:
-          name: Run full xcp_d on nifti with freesurfer
+          name: Run full xcp_d on UK Biobank data
           no_output_timeout: 1h
           command: |
             pytest -rP -o log_cli=true -m "ukbiobank" --cov-append --cov-report term-missing --cov=xcp_d --data_dir=/src/xcp_d/.circleci/data --output_dir=/src/xcp_d/.circleci/out --working_dir=/src/xcp_d/.circleci/work xcp_d
@@ -248,7 +248,7 @@ jobs:
           paths:
             - .coverage.ukbiobank
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_ukbiobank/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_ukbiobank/
 
   nibabies:
     <<: *dockersetup
@@ -279,7 +279,7 @@ jobs:
           paths:
             - .coverage.nibabies
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_nibabies/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_nibabies/
 
   pnc_cifti:
     <<: *dockersetup
@@ -310,7 +310,7 @@ jobs:
           paths:
             - .coverage.pnc_cifti
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_pnc_cifti/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_pnc_cifti/
 
   pnc_cifti_t2wonly:
     <<: *dockersetup
@@ -341,7 +341,7 @@ jobs:
           paths:
             - .coverage.pnc_cifti_t2wonly
       - store_artifacts:
-          path: /src/xcp_d/.circleci/out/test_pnc_cifti_t2wonly/xcp_d/
+          path: /src/xcp_d/.circleci/out/test_pnc_cifti_t2wonly/
 
   pytests:
     <<: *dockersetup
