--- a/pyproject.toml
+++ b/pyproject.toml
@@ -39,6 +39,7 @@ dependencies = [
     "seaborn",  # for plots
     "sentry-sdk ~= 1.42.0",  # for usage reports
     "templateflow ~= 24.2.0",
+    "toml",
 ]
 dynamic = ["version"]
 
