--- a/pyproject.toml
+++ b/pyproject.toml
@@ -35,7 +35,7 @@ dependencies = [
     "pybids ~= 0.16.4",
     "pyyaml",
     "scikit-learn ~= 1.1",
-    "scipy >= 1.8.0",  # nipype needs networkx, which needs scipy > 1.8.0
+    "scipy >= 1.8.0,<=1.12.0",  # nipype needs networkx, which needs scipy > 1.8.0
     "seaborn",  # for plots
     "sentry-sdk ~= 1.44.0",  # for usage reports
     "templateflow ~= 24.2.0",
