--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,15 +18,18 @@ requires-python = ">=3.10"
 dependencies = [
     'importlib_resources; python_version < "3.11"',
     "beautifulsoup4",  # to clean up HTML in DCAN executive summary outputs
-    "h5py",  # for DCAN motion file
+    "bids-validator <= 1.14.4",
+    "h5py <= 3.10.0",  # for DCAN motion file
     "indexed_gzip ~= 1.8.7",  # for loading imgs in nibabel
     "jinja2 ~= 3.1.2",  # for executive summary
+    "joblib <= 1.3.2",
     "matplotlib ~= 3.8.2",
-    "networkx ~= 3.3",  # nipype needs networkx, but 3+ isn't compatible with nipype 1.8.5
+    "networkx <= 3.3",  # nipype needs networkx, but 3+ isn't compatible with nipype 1.8.5
     "nibabel >= 3.2.1",
     "nilearn == 0.10.3",  # 0.10.2 raises error with compcor from fMRIPrep 23
     "nipype ~= 1.8.5",
     "niworkflows == 1.10.1",
+    "nitime",  # for DVARS calculation in Nipype
     "num2words",  # for boilerplates
     "numpy ~= 1.19",
     "packaging",  # for version string parsing
@@ -34,7 +37,7 @@ dependencies = [
     "psutil >= 5.4",  # for sentry
     "pybids ~= 0.16.4",
     "pyyaml",
-    "scikit-learn ~= 1.1",
+    "scikit-learn <= 1.4.1",
     "scipy >= 1.8.0,<=1.12.0",  # nipype needs networkx, which needs scipy > 1.8.0
     "seaborn",  # for plots
     "sentry-sdk ~= 1.44.0",  # for usage reports
