--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,6 +43,7 @@ dependencies = [
     "sentry-sdk ~= 1.45.0",  # for usage reports
     "templateflow ~= 24.2.0",
     "toml",
+    "tqdm",
 ]
 dynamic = ["version"]
 
