--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -5,7 +5,7 @@ orbs:
 .dockersetup:
   &dockersetup
   docker:
-    - image: pennlinc/xcp_d_build:unstable
+    - image: pennlinc/xcp_d_build:0.0.12
   working_directory: /src/xcp_d
 
 runinstall:
