--- a/xcp_d/tests/data/config.toml
+++ b/xcp_d/tests/data/config.toml
@@ -36,7 +36,7 @@ despike = false
 params = "36P"
 custom_confounds = false
 smoothing = 6
-combineruns = false
+combine_runs = false
 motion_filter_type = false
 band_stop_min = false
 band_stop_max = false
