--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -157,6 +157,37 @@ jobs:
       - store_artifacts:
           path: /src/xcp_d/.circleci/out/test_fmriprep_without_freesurfer/
 
+  nifti_without_freesurfer_with_main:
+    <<: *dockersetup
+    steps:
+      - checkout
+      - run:
+          name: Check whether build should be skipped
+          command: |
+            cd /src/xcp_d
+            if [[ "$( git log --format=oneline -n 1 $CIRCLE_SHA1 | grep -i -E '\[skip[ _]?integration\]' )" != "" ]]; then
+              echo "Skipping nifti_without_freesurfer build"
+              circleci step halt
+            fi
+      - restore_cache:
+          key: fmriprepwithoutfreesurfer-03
+      - run: *runinstall
+      - run:
+          name: Run full xcp_d on nifti without freesurfer
+          no_output_timeout: 1h
+          command: |
+            pytest -rP -o log_cli=true -m "fmriprep_without_freesurfer_with_main" --cov-append --cov-report term-missing --cov=xcp_d --data_dir=/src/xcp_d/.circleci/data --output_dir=/src/xcp_d/.circleci/out --working_dir=/src/xcp_d/.circleci/work xcp_d
+            mkdir /src/coverage
+            mv /src/xcp_d/.coverage /src/coverage/.coverage.fmriprep_without_freesurfer_with_main
+            # remove nifti files before uploading artifacts
+            find /src/xcp_d/.circleci/out/ -name "*.nii.gz" -type f -delete
+      - persist_to_workspace:
+          root: /src/coverage/
+          paths:
+            - .coverage.fmriprep_without_freesurfer_with_main
+      - store_artifacts:
+          path: /src/xcp_d/.circleci/out/test_fmriprep_without_freesurfer/
+
   ds001419_nifti:
     <<: *dockersetup
     steps:
