--- a/pyproject.toml
+++ b/pyproject.toml
@@ -28,6 +28,7 @@ dependencies = [
     "nibabel >= 3.2.1",
     "nilearn == 0.10.4",  # 0.10.2 raises error with compcor from fMRIPrep 23
     "nipype ~= 1.8.5",
+    "nireports ~= 23.2.1",
     "niworkflows == 1.10.1",
     "nitime",  # for DVARS calculation in Nipype
     "num2words",  # for boilerplates
