--- a/xcp_d/data/reports-spec.yml
+++ b/xcp_d/data/reports-spec.yml
@@ -46,10 +46,22 @@ sections:
     subtitle: ALFF
   - bids:
       datatype: figures
+      desc: alffSurfacePlot
+      suffix: bold
+    caption:  ALFF, or amplitude of low frequency fluctuations.
+    subtitle: ALFF
+  - bids:
+      datatype: figures
       desc: rehoVolumetricPlot
       suffix: bold
     caption:  ReHo, or regional homogeneity.
               Overlaid on T1W image with same entities as the original image.
+    subtitle: ReHo
+  - bids:
+      datatype: figures
+      desc: rehoSurfacePlot
+      suffix: bold
+    caption:  ReHo, or regional homogeneity.
     subtitle: ReHo
 - name: About
   reportlets:
