Fix more things.

--- a/xcp_d/data/reports-spec-func.yml
+++ b/xcp_d/data/reports-spec-func.yml
@@ -40,6 +40,7 @@ sections:
       datatype: figures
       desc: alffSurfacePlot
       suffix: bold
+      extension: png
     caption:  ALFF, or amplitude of low frequency fluctuations.
     subtitle: ALFF
   - bids:
@@ -53,6 +54,7 @@ sections:
       datatype: figures
       desc: rehoSurfacePlot
       suffix: bold
+      extension: png
     caption:  ReHo, or regional homogeneity.
     subtitle: ReHo
 - name: About
