--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -220,6 +220,8 @@ jobs:
             - .coverage.ds001419_cifti
       - store_artifacts:
           path: /src/xcp_d/.circleci/out/test_ds001419_cifti/
+    # The resource_class feature allows configuring CPU and RAM resources for each job. Different resource classes are available for different executors. https://circleci.com/docs/2.0/configuration-reference/#resourceclass
+    resource_class: large
 
   ukbiobank:
     <<: *dockersetup
