--- a/xcp_d/data/reports-spec.yml
+++ b/xcp_d/data/reports-spec.yml
@@ -40,6 +40,20 @@ sections:
       suffix: bold
     caption:  Parcellation coverage.
     subtitle: Coverage
+  - bids:
+      datatype: figures
+      desc: coverageParcellatedStandard
+      suffix: bold
+    caption: |
+      Parcellation coverage, overlaid on the fsLR template surface.
+    subtitle: Coverage
+  - bids:
+      datatype: figures
+      desc: coverageParcellatedSubject
+      suffix: bold
+    caption: |
+      Parcellation coverage, overlaid on the subject's surface warped to the fsLR template.
+    subtitle: Coverage
   - bids: {datatype: figures, desc: connectivityplot, suffix: bold}
     caption:  This plot shows heatmaps from ROI-to-ROI correlations from one to four atlases.
     subtitle: Correlation Heatmaps from A Subset of Atlases
@@ -74,6 +88,21 @@ sections:
     subtitle: ALFF
   - bids:
       datatype: figures
+      desc: alffParcellatedStandard
+      suffix: bold
+    caption: |
+      ALFF, or amplitude of low frequency fluctuations, overlaid on the fsLR template surface.
+    subtitle: ALFF
+  - bids:
+      datatype: figures
+      desc: alffParcellatedSubject
+      suffix: bold
+    caption: |
+      ALFF, or amplitude of low frequency fluctuations, overlaid on the subject's surface
+      warped to the fsLR template.
+    subtitle: ALFF
+  - bids:
+      datatype: figures
       desc: rehoVolumetricPlot
       suffix: bold
     caption:  ReHo, or regional homogeneity.
@@ -100,6 +129,21 @@ sections:
       desc: rehoParcellated
       suffix: bold
     caption:  Parcellated ReHo.
+    subtitle: ReHo
+  - bids:
+      datatype: figures
+      desc: rehoParcellatedStandard
+      suffix: bold
+    caption: |
+      ReHo, or regional homogeneity, overlaid on the fsLR template surface.
+    subtitle: ReHo
+  - bids:
+      datatype: figures
+      desc: rehoParcellatedSubject
+      suffix: bold
+    caption: |
+      ReHo, or regional homogeneity, overlaid on the subject's surface
+      warped to the fsLR template.
     subtitle: ReHo
 - name: About
   reportlets:
