Try using surfplot for parcellated surfaces.

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -42,6 +42,7 @@ dependencies = [
     "scipy <= 1.14.0,>= 1.14.0",  # nipype needs networkx, which needs scipy > 1.8.0
     "seaborn",  # for plots
     "sentry-sdk ~= 2.10.0",  # for usage reports
+    "surfplot ~= 0.2.0",  # for surface plots
     "templateflow ~= 24.2.0",
     "toml",
 ]
