--- a/xcp_d/data/nuisance/aroma_gsr.yml
+++ b/xcp_d/data/nuisance/aroma_gsr.yml
@@ -1,9 +1,9 @@
-name: aroma
+name: aroma_gsr
 description: |
-    Nuisance regressors were selected according to the 'aroma' strategy.
+    Nuisance regressors were selected according to the 'aroma_gsr' strategy.
     AROMA motion-labeled components [@pruim2015ica], mean white matter signal,
-    and mean cerebrospinal fluid signal were selected as nuisance regressors
-    [@benchmarkp;@satterthwaite_2013].
+    mean cerebrospinal fluid signal, and mean global signal were selected as
+    nuisance regressors [@benchmarkp;@satterthwaite_2013].
 confounds:
 -   dataset: preproc
     query:
@@ -11,6 +11,7 @@ confounds:
         extension: .tsv
         suffix: timeseries
     columns:
+    - global_signal
     - csf
     - white_matter
 -   dataset: fmripost-aroma
@@ -19,5 +20,4 @@ confounds:
         extension: .tsv
         suffix: timeseries
     columns:
-    # Regular expressions begin with ``^`` and end with ``$``.
     - ^aroma_orth_motion_.*$
