--- a/xcp_d/data/nuisance/rapidtide+36P.yml
+++ b/xcp_d/data/nuisance/rapidtide+36P.yml
@@ -1,17 +1,60 @@
--   dataset: fmriprep
-    query:
-        description: confounds
-        extension: .tsv
-        suffix: timeseries
-    columns:
-    - trans_x
-    - trans_y
-    - trans_z
-    - rot_x
-    - rot_y
-    - rot_z
--   dataset: fmripost-rapidtide
-    query:
-        description: confounds
-        extension: .nii.gz
-        suffix: timeseries
+name: 36P+rapidtide
+description: |
+	In total, 37 nuisance regressors were selected from the preprocessing confounds,
+	according to the '36P+rapidtide' strategy.
+	These nuisance regressors included
+	six motion parameters, mean global signal, mean white matter signal,
+	mean cerebrospinal fluid signal with their temporal derivatives,
+	and quadratic expansion of six motion parameters, tissue signals and
+	their temporal derivatives [@benchmarkp;@satterthwaite_2013].
+	In addition to the 36 regressors described above, the time-lagged global signal
+	from rapidtide was included as a voxel-wise nuisance regressor.
+confounds:
+-	dataset: preproc
+	query:
+		space: null
+		description: confounds
+		extension: .tsv
+		suffix: timeseries
+		columns:
+		- trans_x
+		- trans_x_derivative1
+		- trans_x_derivative1_power2
+		- trans_x_power2
+		- trans_y
+		- trans_y_derivative1
+		- trans_y_derivative1_power2
+		- trans_y_power2
+		- trans_z
+		- trans_z_derivative1
+		- trans_z_derivative1_power2
+		- trans_z_power2
+		- rot_x
+		- rot_x_derivative1
+		- rot_x_power2
+		- rot_x_derivative1_power2
+		- rot_y
+		- rot_y_derivative1
+		- rot_y_power2
+		- rot_y_derivative1_power2
+		- rot_z
+		- rot_z_derivative1
+		- rot_z_power2
+		- rot_z_derivative1_power2
+		- global_signal
+		- global_signal_derivative1
+		- global_signal_power2
+		- global_signal_derivative1_power2
+		- csf
+		- csf_derivative1
+		- csf_power2
+		- csf_derivative1_power2
+		- white_matter
+		- white_matter_derivative1
+		- white_matter_power2
+		- white_matter_derivative1_power2
+-	dataset: fmripost-rapidtide
+	query:
+		description: confounds
+		extension: .nii.gz
+		suffix: timeseries
