--- a/xcp_d/data/nuisance/aroma.yml
+++ b/xcp_d/data/nuisance/aroma.yml
@@ -5,7 +5,7 @@ description: |
     and mean cerebrospinal fluid signal were selected as nuisance regressors
     [@benchmarkp;@satterthwaite_2013].
 confounds:
--   dataset: preproc
+-   dataset: preprocessed
     query:
         description: confounds
         extension: .tsv
